[gd_scene load_steps=13 format=3 uid="uid://cypevwgfkanl"]

[ext_resource type="Script" path="res://entities/zombie.gd" id="1_brq1p"]
[ext_resource type="Texture2D" uid="uid://bich7ngn5o7rj" path="res://sprites/zombie.png" id="1_nbwaf"]

[sub_resource type="Animation" id="Animation_iptae"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Zombie:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Zombie:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_fmlrl"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Zombie:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_65ixn"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Zombie:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 1, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ey1xs"]
_data = {
"RESET": SubResource("Animation_iptae"),
"idle": SubResource("Animation_fmlrl"),
"walk": SubResource("Animation_65ixn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ip671"]
size = Vector2(80, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61ndq"]
size = Vector2(83, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b105h"]
size = Vector2(896, 640)

[sub_resource type="Animation" id="Animation_ia7vq"]
resource_name = "half"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Zombie:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 56)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("projectile_collision/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(83, 60)]
}

[sub_resource type="Animation" id="Animation_63upk"]
resource_name = "normal"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:shape:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("projectile_collision/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(83, 132)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Zombie:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uqdma"]
_data = {
"half": SubResource("Animation_ia7vq"),
"normal": SubResource("Animation_63upk")
}

[node name="zombie" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 23
wall_min_slide_angle = 0.0
script = ExtResource("1_brq1p")

[node name="Zombie" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(8, 8)
texture = ExtResource("1_nbwaf")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ey1xs")
}
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_ip671")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = -69.0

[node name="projectile_collision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="projectile_collision"]
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_61ndq")

[node name="vision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision"]
shape = SubResource("RectangleShape2D_b105h")

[node name="half" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uqdma")
}

[connection signal="area_entered" from="projectile_collision" to="." method="_on_projectile_collision_area_entered"]
[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="vision" to="." method="_on_vision_body_exited"]
